feat: implement additional pages adaptive

--- a/src/css/common/header.scss
+++ b/src/css/common/header.scss
@@ -18,6 +18,14 @@
   }
 
   @include location(row, 14px, 300, 13px);
+
+  .location {
+    @include media-laptop {
+      .location {
+        margin-right: 2rem;
+      }
+    }
+  }
 }
 
 .header__title {
@@ -92,11 +100,28 @@
   padding: 2rem 0;
 
   .callback {
-    @include button(2rem, 3rem);
+    @include button(1.75rem, 3.3rem);
 
     margin: 0;
 
     font-size: 13px;
+
+    @include media-laptop {
+      padding: 1.5rem 1.3rem;
+    }
+
+    @include media-tablet-lg {
+      align-self: flex-end;
+    }
+  }
+}
+
+.header__content {
+  display: flex;
+  justify-content: space-between;
+
+  @include media-tablet-lg {
+    margin-bottom: 1rem;
   }
 }
 
@@ -104,6 +129,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @include media-tablet-lg {
+    flex-direction: column;
+    align-items: unset;
+  }
 }
 
 .header__info {
@@ -121,22 +151,45 @@
   .header__icon {
     margin-right: 1.2rem;
   }
+
+  @include media-laptop {
+    margin-right: 1rem;
+  }
 }
 
 .header__icon {
   margin-right: 6px;
 }
 
+.header__logo-wrapper {
+  display: flex;
+  align-items: center;
+
+  margin-right: 8.2rem;
+
+  @include media-laptop {
+    margin-right: 5rem;
+  }
+
+  @include media-tablet-lg {
+    margin-right: 1.5rem;
+  }
+}
+
 .header__logo {
   max-width: 132px;
 
   margin-right: 3.8rem;
+
+  @include media-laptop {
+    margin-right: 1.5rem;
+
+    max-width: 100px;
+  }
 }
 
 .header__subtitle {
   max-width: 19.6rem;
-
-  margin-right: 8.2rem;
 
   font-size: 14px;
   color: $color-primary-omega;
@@ -150,6 +203,7 @@
 
   box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.07);
   border-radius: 10px 0px 0px 10px;
+  background-color: $color-primary-beta;
 
   &:hover {
     .header__club-img {
@@ -166,6 +220,14 @@
   opacity: 0.6;
 
   transition: opacity 0.1s linear;
+
+  @include media-custom(1365.98px) {
+    max-width: 6rem;
+  }
+
+  @include media-custom(1299.98px) {
+    display: none;
+  }
 }
 
 @keyframes dropDown {
