--- a/src/css/mixins/media.scss
+++ b/src/css/mixins/media.scss
@@ -1,41 +1,47 @@
+@mixin media-desktop {
+  @media only screen and (max-width: $media-xxl) {
+    @content;
+  }
+}
+
 @mixin media-laptop {
-  @media (max-width: $media-xl) {
+  @media only screen and (max-width: $media-xl) {
     @content;
   }
 }
 
 @mixin media-tablet-lg {
-  @media (max-width: $media-lg) {
+  @media only screen and (max-width: $media-lg) {
     @content;
   }
 }
 
 @mixin media-tablet-sm {
-  @media (max-width: $media-md) {
+  @media only screen and (max-width: $media-md) {
     @content;
   }
 }
 
 @mixin media-smartphone-lg {
-  @media (max-width: $media-sm) {
+  @media only screen and (max-width: $media-sm) {
     @content;
   }
 }
 
 @mixin media-smartphone-sm {
-  @media (max-width: $media-xs) {
+  @media only screen and (max-width: $media-xs) {
     @content;
   }
 }
 
 @mixin media-custom($width) {
-  @media (max-width: $width) {
+  @media only screen and (max-width: $width) {
     @content;
   }
 }
 
 @mixin media-custom-mf($width) {
-  @media (min-width: $width) {
+  @media only screen and (min-width: $width) {
     @content;
   }
 }
