--- a/src/css/pages/service-onetime/callback.scss
+++ b/src/css/pages/service-onetime/callback.scss
@@ -4,12 +4,17 @@
   align-items: center;
 
   padding: 2rem 0 6.5rem;
+
+  @include media-tablet-lg {
+    padding: 1rem 0 3.5rem;
+  }
 }
 
 .onetime__callback-title {
   margin-bottom: 8px;
 
   line-height: 1.7;
+  text-align: center;
   font-size: 2.4rem;
   font-weight: 500;
   color: $color-primary-alpha;
