--- a/src/css/utils/vars.scss
+++ b/src/css/utils/vars.scss
@@ -1,9 +1,10 @@
 // Breakpoints
-$media-xl: 1199px;
-$media-lg: 991px;
-$media-md: 767px;
-$media-sm: 575px;
-$media-xs: 480px;
+$media-xxl: 1399.98px;
+$media-xl: 1199.98px;
+$media-lg: 991.98px;
+$media-md: 767.98px;
+$media-sm: 575.98px;
+$media-xs: 480.98px;
 // Colors
 $color-primary-alpha: #d4251f;
 $color-primary-beta: #fff;
