--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -4,19 +4,20 @@ html(lang="ru")
     head
       meta(charset="utf-8")
       meta(name="description" content="ООО ОлдТраффорд - Оказание полного спектра бухгалтерских услуг для бизнеса и физических лиц")
-      block title
-        title ООО ОлдТраффорд
       meta(content="width=device-width, initial-scale=1" name="viewport")
       meta(content="ie=edge" http-equiv="x-ua-compatible")
+      block title
+        title ООО ОлдТраффорд
       link(rel="stylesheet" href="css/style.min.css")
   body
     include ../includes/common/mixins
-    block header
-      include header
-    block content
-    block footer
-      include footer
-    +modalForm
-    #overlay.overlay
-    block scripts
-      script(src='scripts/main.min.js')
+    .page
+      block header
+        include header
+      block content
+      block footer
+        include footer
+      +modalForm
+      #overlay.overlay
+      block scripts
+        script(src='scripts/main.min.js')
