--- a/src/pages/service-law.pug
+++ b/src/pages/service-law.pug
@@ -63,7 +63,7 @@ block content
             +icon('law-contacts__icon', 'message')
             a(href="mailto:veto.by@mail.ru") veto.by@mail.ru
           .law-contacts__item
-            +location
+            +location(true, false, '220030, г. Минск, ул. Энгельса, д. 34, офис 305')
         .law-contacts__info
-          p С подробной информацией можно ознакомиться на сайте
-          a(href="https://veto.by/") veto.by
+          p С подробной информацией можно ознакомиться на сайте&nbsp;
+            a(href="https://veto.by/") veto.by
