--- a/src/css/common/footer.scss
+++ b/src/css/common/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding: 3.2rem 0;
+  padding: 3.2rem 0 0.9rem;
 
   background-color: $color-tertiary-beta;
 }
@@ -8,21 +8,38 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @include media-tablet-lg {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .footer__item {
   display: flex;
   align-items: center;
 
-  font-size: 14px;
+  margin-bottom: 2.3rem;
+
+  @include media-laptop {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  @include media-smartphone-lg {
+    max-width: 47rem;
+  }
 }
 
 .footer__txt {
   margin-right: 1.6rem;
+
+  font-size: 14px;
 }
 
 .footer__btn {
   color: $color-primary-gamma;
+  font-size: 14px;
 
   border-bottom: 1px solid $color-primary-gamma;
 
@@ -31,5 +48,9 @@
   &:hover {
     color: lighten($color-primary-gamma, 10);
     border-color: lighten($color-primary-gamma, 10);
+  }
+
+  @include media-laptop {
+    margin-top: 2.3rem;
   }
 }
