--- a/src/css/common/global.scss
+++ b/src/css/common/global.scss
@@ -51,6 +51,8 @@ h6 {
 
 p {
   margin: 0;
+
+  font-size: 16px;
 }
 
 select {
@@ -133,8 +135,8 @@ html {
 
   font-size: 62.5%;
 
-  @include media-tablet-lg {
-    font-size: 50%;
+  @include media-laptop {
+    font-size: 55%;
   }
 }
 
@@ -154,6 +156,12 @@ body {
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .overlay {
