--- a/src/css/common/includes/consult.scss
+++ b/src/css/common/includes/consult.scss
@@ -1,8 +1,9 @@
 .consult {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
-  padding-top: 2.2rem;
+  padding-top: 1rem;
   margin-bottom: 8rem;
 
   background: linear-gradient(
@@ -13,21 +14,47 @@
 
   border-radius: 20px;
   border: 1px solid $color-primary-alpha;
+
+  @include media-tablet-sm {
+    flex-direction: column-reverse;
+  }
 }
 
 .consult__img {
+  align-self: flex-end;
+
   max-width: 40.2rem;
 
-  margin-right: 6.5rem;
-
   object-fit: cover;
+
+  @include media-tablet-lg {
+    max-width: 38.2rem;
+  }
+
+  @include media-tablet-sm {
+    align-self: auto;
+  }
 }
 
 .consult__info {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  padding: 5rem 7.7rem 3rem 0;
+
   text-align: center;
+
+  @include media-tablet-sm {
+    padding: 5rem 1.5rem 3rem;
+  }
 
   .phones {
     @include phones('row', 3rem);
+
+    @include media-laptop {
+      flex-direction: column;
+    }
   }
 }
 
