--- a/src/css/common/includes/crumbs.scss
+++ b/src/css/common/includes/crumbs.scss
@@ -1,9 +1,14 @@
 .crumbs {
   margin-bottom: 4.8rem;
 
+  @include media-tablet-lg {
+    margin-bottom: 3rem;
+  }
+
   ul {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   li {
@@ -16,11 +21,15 @@
     }
 
     &:not(:last-of-type) {
-      a::after {
+      &::after {
         display: inline-block;
         content: '/';
         margin: 0 2rem;
         color: $color-primary-gamma;
+
+        @include media-smartphone-lg {
+          margin: 0 1rem;
+        }
       }
     }
 
