--- a/src/css/common/includes/form.scss
+++ b/src/css/common/includes/form.scss
@@ -87,6 +87,10 @@
     color: $color-primary-beta;
     background-color: $color-secondary-psi;
   }
+
+  @include media-smartphone-lg {
+    padding: 1.5em 2.25em;
+  }
 }
 
 .form__checkbox-wrapper {
