--- a/src/css/mixins/location.scss
+++ b/src/css/mixins/location.scss
@@ -19,9 +19,15 @@
 
     margin-bottom: 8px;
 
-    font-size: $fsAddress;
-    color: $color-primary-gamma;
-    font-weight: $fwAddress;
+    p {
+      font-size: $fsAddress;
+      color: $color-primary-gamma;
+      font-weight: $fwAddress;
+    }
+
+    @include media-laptop {
+      max-width: 25rem;
+    }
   }
 
   .location__metro {
@@ -54,4 +60,9 @@
   fill: $color-secondary-beta;
 
   margin-right: 6px;
+
+  min-height: 18px;
+  min-width: 18px;
+  max-width: 18px;
+  max-height: 18px;
 }
