--- a/src/css/pages/fanzone/fanzone.scss
+++ b/src/css/pages/fanzone/fanzone.scss
@@ -1,5 +1,9 @@
 .fanzone {
   padding-bottom: 3.3rem;
+
+  @include media-tablet-lg {
+    padding-bottom: 0;
+  }
 }
 
 .fanzone__img {
@@ -22,19 +26,31 @@
       color: $color-primary-alpha;
     }
   }
+
+  @include media-tablet-lg {
+    padding-bottom: 3.2rem;
+  }
 }
 
 .fanzone__clubs {
   padding-bottom: 5.2rem;
+
+  @include media-tablet-lg {
+    padding-bottom: 4.5rem;
+  }
 }
 
 .fanzone__inner {
+  position: relative;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   max-width: 148.4rem;
   margin: 0 auto;
+
+  overflow: hidden;
 }
 
 .fanzone__list {
@@ -43,24 +59,53 @@
   flex-wrap: wrap;
 
   margin: 0 auto;
+  padding: 0 1rem;
 
   max-width: 87rem;
   width: 100%;
+
+  @include media-laptop {
+    padding: 0 15px;
+  }
+
+  @include media-smartphone-lg {
+    padding: 0 100px;
+  }
+
+  @include media-smartphone-sm {
+    padding: 0 30px;
+  }
 }
 
 .fanzone__item {
+  position: relative;
+  z-index: 2;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: inherit;
 
   width: 31%;
-  padding: 3rem 0;
+  min-height: 320px;
+
+  padding: 2.5rem 0;
 
   margin-bottom: 4rem;
 
   border: 2px solid $color-primary-alpha;
   border-radius: 10px;
+  background-color: $color-primary-beta;
+
+  @include media-laptop {
+    width: 48%;
+  }
+
+  @include media-smartphone-lg {
+    width: 100%;
+
+    margin-bottom: 2rem;
+  }
 }
 
 .fanzone__item-images {
@@ -75,9 +120,9 @@
   width: auto;
 
   margin-bottom: 1.8rem;
+  padding: 0 1rem;
 
   &:not(:last-of-type) {
-    margin-right: 2.2rem;
     margin-bottom: 1rem;
   }
 }
@@ -103,7 +148,41 @@
 }
 
 .fanzone__footballer-img {
-  max-width: 26.4rem;
+  max-width: 264px;
+
+  &--left {
+    left: 0;
+
+    @include media-laptop {
+      left: -12%;
+    }
+
+    @include media-smartphone-lg {
+      top: 17%;
+      left: -135px;
+
+      transform: translateY(-17%);
+    }
+  }
+
+  &--right {
+    right: 0;
+
+    @include media-laptop {
+      right: -12%;
+    }
+
+    @include media-smartphone-lg {
+      top: 83%;
+      right: -135px;
+
+      transform: translateY(-83%);
+    }
+  }
+
+  @include media-desktop {
+    position: absolute;
+  }
 }
 
 .fanzone__title {
