--- a/src/css/pages/service-complex/complex.scss
+++ b/src/css/pages/service-complex/complex.scss
@@ -1,5 +1,9 @@
 .complex__inner {
   padding: 3.1rem 0 8.6rem;
+
+  @include media-tablet-lg {
+    padding-bottom: 5rem;
+  }
 }
 
 .complex__subtitle {
@@ -14,10 +18,23 @@
 .complex__content {
   display: flex;
   justify-content: space-between;
+
+  @include media-laptop {
+    align-items: center;
+  }
+
+  @include media-tablet-lg {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .complex__list-wrapper {
   margin-right: 5px;
+
+  @include media-tablet-lg {
+    margin-bottom: 5rem;
+  }
 }
 
 .complex__cost {
@@ -63,6 +80,10 @@
 .complex__img {
   max-width: 36rem;
   object-fit: cover;
+
+  @include media-tablet-lg {
+    max-width: 30rem;
+  }
 }
 
 .complex__txt {
