--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -11,6 +11,7 @@
 @import 'common/global';
 @import 'common/header';
 @import 'common/footer';
+@import 'common/burger';
 @import 'common/includes/form';
 @import 'common/includes/callback';
 @import 'common/includes/consult';
