--- a/src/css/mixins/location.scss
+++ b/src/css/mixins/location.scss
@@ -24,10 +24,6 @@
       color: $color-primary-gamma;
       font-weight: $fwAddress;
     }
-
-    @include media-laptop {
-      max-width: 25rem;
-    }
   }
 
   .location__metro {
@@ -41,7 +37,9 @@
     flex-direction: $flexDirMetroItem;
 
     li {
-      margin-right: 12px;
+      &:not(:last-of-type) {
+        margin-right: 12px;
+      }
 
       font-size: $fsMetro;
 
