--- a/src/pages/common/header.pug
+++ b/src/pages/common/header.pug
@@ -10,7 +10,7 @@ header#header.header
         p buhsale@mail.ru
   +decorator
   .header__bottom-wrapper
-    #header-bot-inner.header__bottom.container
+    #header-bot.header__bottom.container
       .header__logo-wrapper
         .header__logo-content
           img.header__logo(src="images/index/header/logo.svg", alt="Олд Траффорд")
