--- a/src/css/common/includes/icon.scss
+++ b/src/css/common/includes/icon.scss
@@ -4,7 +4,9 @@
   margin-right: 12px;
 
   &--large {
-    width: 30px;
-    height: 30px;
+    min-width: 30px;
+    min-height: 30px;
+    max-width: 30px;
+    max-height: 30px;
   }
 }
