--- a/src/css/common/includes/modal.scss
+++ b/src/css/common/includes/modal.scss
@@ -7,6 +7,7 @@
   left: 50%;
 
   max-width: 43rem;
+
   width: 100%;
 
   padding: 10px;
@@ -22,6 +23,10 @@
   border-radius: 10px;
   background-color: $color-primary-beta;
   box-shadow: 0px 4px 35px rgba(0, 0, 0, 0.04);
+
+  @include media-smartphone-sm {
+    max-width: 35rem;
+  }
 
   &.active {
     pointer-events: all;
@@ -74,6 +79,13 @@
 
   border: 1px solid #f8f8f8;
   border-radius: 10px;
+
+  max-height: calc(100vh - 10px);
+  overflow: auto;
+
+  @include media-tablet-lg {
+    padding: 3.8rem 2rem 1.6rem 2rem;
+  }
 }
 
 .modal__title {
@@ -95,6 +107,11 @@
   &-icon {
     width: 20px;
     height: 20px;
+  }
+
+  @include media-tablet-lg {
+    top: 10px;
+    right: 10px;
   }
 }
 
