fix: modal close

--- a/src/css/common/global.scss
+++ b/src/css/common/global.scss
@@ -129,7 +129,6 @@ button {
 }
 
 html {
-  scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -162,6 +161,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-height: 100vh;
 }
 
 .overlay {
