--- a/src/css/common/includes/crumbs.scss
+++ b/src/css/common/includes/crumbs.scss
@@ -5,6 +5,10 @@
     margin-bottom: 3rem;
   }
 
+  @include media-tablet-sm {
+    margin-top: 20px;
+  }
+
   ul {
     display: flex;
     align-items: center;
