--- a/src/css/pages/contacts/contacts.scss
+++ b/src/css/pages/contacts/contacts.scss
@@ -43,4 +43,10 @@
 
 .contacts__mail {
   color: $color-primary-gamma;
+
+  transition: color 0.05s linear;
+
+  &:hover {
+    color: $color-primary-alpha;
+  }
 }
